2021-05-09  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

        * Magick++/lib/Magick++/STL.h: Support compiling with C++'98
        through C++'17.

        * Magick++/lib/Magick++/Drawable.h: Support compiling with C++'98
        through C++'17.

2021-05-02  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

        * magick/command.c (CompareImageCommand): If user has not
        indicated a 'matte' preference, then include the opacity channel
        in the compare if either image has a matte channel.  Addresses
        SourceForge issue #642 "Result of command "gm compare" depends on
        order of images".

2021-04-25  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

        * magick/compare.c (IsImagesEqual): Eliminate hard
        "ImageOpacityDiffers" error when matte channel flag differs
        between the images being compared.  Instead of throwing a hard
        error, treat the opacity channel of the image as opaque if the
        matte flag is not set.

2021-04-24  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

        * coders/jpeg.c: It is apparently now undefined behavior to assign
        the return value from setjmp() to a variable.  Remove recently
        added code which is now doing that.  Much thanks to Chris Gravely
        for noticing this.

2021-04-19  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

        * coders/jpeg.c (ReadJPEGImage): Error cases depending on
        ThrowReaderException() were now leaking client data memory.
        Replace such cases with customized ThrowJPEGReaderException()
        which assures that it is freed.
        (WriteJPEGImage): Error cases depending on ThrowWriterException()
        were now client data memory.  Replace such cases with customized
        ThrowJPEGWriterException() which assures that it is freed.

2021-04-18  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

        * coders/jpeg.c: Restructure client data so it is allocated on the