@@ -10,5 +10,5 @@
 
 #define public MagickPackageName "GraphicsMagick"
 #define public MagickPackageVersion "1.4"
-#define public MagickPackageVersionAddendum ".020210509"
-#define public MagickPackageReleaseDate "snapshot-20210509"
+#define public MagickPackageVersionAddendum ".020210510"
+#define public MagickPackageReleaseDate "snapshot-20210510"
