@@ -35,6 +35,12 @@
 <div class="document">
 
 
+<p>2021-05-10  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
+<blockquote>
+* Magick++/lib/Magick++/{Drawable.h, STL.h}: Use _MSVC_LANG in
+addition to __cplusplus when testing for C++'17 since the
+Microsoft C++ compiler only properly defines __cplusplus if the
+/Zc:__cplusplus switch was provided.</blockquote>
 <p>2021-05-09  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
 <blockquote>
 <p>* Magick++/lib/Magick++/STL.h: Support compiling with C++'98
